Cards have now been formatted to match outcome.     Changes: - Styled the flex container created for cards to make sure it has appropriate padding, gap and text is wrapped.
Hence, the whole exercise has been completed.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -45,6 +45,9 @@ body {
 
 .container{
   display: flex;
+  padding: 48px; /* padding around cards as stated in README.md */
+  flex-wrap: wrap; /* allows cards to wrap in case of smaller screens */
+  gap: 32px; /* space between cards */
 }
 .card {
   border: 1px solid #eee;
